Remove redundant inline style

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -76,7 +76,7 @@
         <div class="charities-container">
             [[#charities:i]]
                 [[#if show_on_website ]]
-                <div class="charity" style="vertical-align: text-bottom">
+                <div class="charity">
                     <div class="charity-info">
                         <img class="charity-img" style="margin-top:[[ image_top_margin ]]px;"
                              src="static/[[ website_image ]]" alt="[[ website_label ]]">
