--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -171,14 +171,14 @@
                     <div class="form-group" id="form_first_name">
                         <label class="control-label col-sm-3" for="id_first_name">Name</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="text" id="id_first_name" maxlength="1024" name="first_name" placeholder="Name" title="" value="">
+                            <input class="form-control" type="text" id="id_first_name" maxlength="1024" name="first_name" placeholder="Name" required aria-required>
                         </div>
                     </div>
 
                     <div class="form-group" id="form_email">
                         <label class="control-label col-sm-3" for="id_email">Email</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="email" id="id_email" maxlength="254" name="email" placeholder="Email"  title="" value="" required aria-required>
+                            <input class="form-control" type="email" id="id_email" maxlength="254" name="email" placeholder="Email" required aria-required>
                         </div>
                     </div>
 
@@ -461,6 +461,13 @@
 
     ractive.on('submit', function(event) {
         event.original.preventDefault();
+
+        var $validator = $('#id_pledge_form').validate();
+        if (!$validator.checkForm()) {
+            $validator.showErrors();
+            return;
+        }
+
         if (ractive.get('pmt_method') === "3") {
             callPinAPI(submitForm);
         } else {
