--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -7,15 +7,15 @@
     {#            </div>#}
 
     <div class="form-group">
-        <label class="control-label labels col-xs-3" for="cardName">Name on card</label>
-        <div class="col-xs-9">
+        <label class="control-label labels col-sm-3" for="cardName">Name on card</label>
+        <div class="col-sm-9">
             <input type="text" class="form-control cc-form" id="cc-name" placeholder="Full name"/>
         </div>
     </div>
 
     <div class="form-group">
-        <label class="control-label labels col-xs-3" for="cardNumber">Card number</label>
-        <div class="col-xs-9">
+        <label class="control-label labels col-sm-3" for="cardNumber">Card number</label>
+        <div class="col-sm-9">
             <div class="input-group">
                 <input
                         type="tel"
@@ -30,9 +30,9 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label labels col-xs-3" for="cardExpiry"><span class="hidden-xs">Expiration</span><span
+        <label class="control-label labels col-sm-3" for="cardExpiry"><span class="hidden-xs">Expiration</span><span
                 class="visible-xs-inline">Exp</span> date</label>
-        <div class="col-xs-4">
+        <div class="col-sm-4">
             <input
                     type="tel"
                     class="form-control cc-form"
@@ -41,8 +41,8 @@
                     autocomplete="cc-exp"
             />
         </div>
-        <label class="control-label labels col-xs-3" for="cardCVC">CV code</label>
-        <div class="col-xs-2">
+        <label class="control-label labels col-sm-3" for="cardCVC">CV code</label>
+        <div class="col-sm-2">
             <input
                     type="password"
                     class="form-control cc-form"
