fix ractivejs block

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    [[#if selected_charity.name==='Against Malaria Foundation' & step === 2]]
+    [[#if selected_charity && selected_charity.name==='Against Malaria Foundation' && step === 2]]
     <div class="donation-step" id="step-2">
         <div class="selected-charity-box">
             <a href='https://www.againstmalaria.com/Donation.aspx?GroupID=86'>
