CVC shouldn't be a password

--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -44,7 +44,7 @@
         <label class="control-label labels col-sm-3" for="cardCVC">CV code</label>
         <div class="col-sm-2">
             <input
-                    type="password"
+                    type="text"
                     class="form-control cc-form"
                     id="cc-cvc"
                     placeholder="CVC"
