--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -196,7 +196,17 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3 long-control-label" for="id_how_did_you_hear_about_us">How did you hear about us?</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="text" id="id_how_did_you_hear_about_us" name="how_did_you_hear_about_us" placeholder="e.g. friends, family, Google, advertisements" title="" value="">
+                            <select class="form-control" id="id_how_did_you_hear_about_us" name="how_did_you_hear_about_us">
+                                <option value="" disabled selected>---------</option>
+                                <option value="The Life You Can Save">The Life You Can Save</option>
+                                <option value="News">News</option>
+                                <option value="Advertising">Advertising</option>
+                                <option value="GiveWell">GiveWell</option>
+                                <option value="From the charity (SCI, Evidence Action, GiveDirectly)">From the charity (SCI, Evidence Action, GiveDirectly)</option>
+                                <option value="Search engine (Google etc.)">Search engine (Google etc.)</option>
+                                <option value="Friend">Friend</option>
+                                <option value="Giving What We Can">Giving What We Can</option>
+                            </select>
                         </div>
                     </div>
 
