--- a/static/css/credit_card.css
+++ b/static/css/credit_card.css
@@ -14,7 +14,7 @@ body { margin-top:20px; }
 .form-container label.error {
   font-weight: bold;
   color: red;
-  padding: 2px 8px;
+  padding: 2px 0;
   margin-top: 2px;
 }
 .form-container .payment-errors {
