Revert "remove 'name's on credit card fields so they don't get submitted to us"
This reverts commit fa845b14bda3abfb04d2a6aeb0359de6f1c0a39d.

--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label class="control-label labels col-sm-3" for="cardName">Name on card</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control cc-form" id="cc-name" placeholder="Full name"/>
+            <input type="text" class="form-control cc-form" name="cardName" id="cc-name" placeholder="Full name"/>
         </div>
     </div>
 
@@ -20,6 +20,7 @@
                 <input
                         type="tel"
                         class="form-control cc-form"
+                        name="cardNumber"
                         id="cc-number"
                         placeholder="Valid Card Number"
                         autocomplete="cc-number"
@@ -37,6 +38,7 @@
                     type="tel"
                     class="form-control cc-form"
                     id="cc-expiry"
+                    name="cardExpiry"
                     placeholder="MM / YY"
                     autocomplete="cc-exp"
             />
@@ -47,6 +49,7 @@
                     type="text"
                     class="form-control cc-form"
                     id="cc-cvc"
+                    name="cardCVC"
                     placeholder="CVC"
                     autocomplete="cc-csc"
             />
